--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite Typescript + Tailwind Starter</title>
   </head>
-  <body class="w-screen h-screen min-h-0">
-    <div id="app" class="flex w-screen h-screen min-h-0"></div>
+  <body class="w-full h-full">
+    <div id="app" class="w-full h-full"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
